# korean-steam-review-rag

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7b0bb08a9097_create_review_topic_and_topic_names_.py  7eaa5197780f_create_review_analysis_table.py  e2903c8f92f8_create_reviews_table.py
backup/: README_01.md  README_02.md  README_03.md  README_05.md  README_07.md  README_08.md  README_09.md  README_10.md  README_11.md  README_12.md  README_14.md  README_15.md  README_16.md  README_17.md  README_18.md  README_19.md  README_20.md
docs/: ARCHITECTURE.md  ERD.md  ROADMAP.md
scripts/: analyze_sentiment.py  calibrate.py  check_api.py  check_cache.py  clean_reviews.py  collect_reviews.py  extract_topics.py  filter_korean.py  name_topics.py  produce_reviews.py  save_reviews.py
src/steam_rag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/steam_rag/config/: settings.py
src/steam_rag/domain/: interfaces.py  models.py
src/steam_rag/etl/: language.py  pipeline.py  transform.py
src/steam_rag/etl/analysis/: metrics.py  sentiment.py  split.py  topic.py  topic_namer.py
src/steam_rag/ingestion/collectors/: steam.py
src/steam_rag/serving/: schemas.py
src/steam_rag/serving/api/: main.py
src/steam_rag/storage/: cache.py  caching_repository.py
src/steam_rag/storage/postgres/: analysis_repository.py  models.py  repository.py  session.py  topic_repository.py
